vlib/v/checker/tests/comptime_match_cond_cannot_mut.vv
fn main() {
	mut x := 1
	$match x {
		1 {
			println('1')
		}
		2 {
			println('2')
		}
	}

	y := 100
	$match mut y {
		100 {
			println('100')
		}
	}
}
